css fix so that the text isnt cut off.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -149,7 +149,7 @@ footer {
 }
 
 .gallery-item {
-  overflow: hidden;
+  overflow: visible;
   text-align: center;
   transition: transform 0.3s ease;
   max-width: 250px; 
